force-app/main/default/objects/NSSSalesClient__c/NSSSalesClient__c.object-meta.xml
<CustomObject>
    <description>Import of the sales Client data for NSS</description>
    <label>NSS Sales Client</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch-Client Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSS Sales Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>