force-app/main/default/objects/NSSSalesClient__c/fields/Benefits_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Client_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Client Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>