force-app/main/default/objects/NSSSalesClient__c/fields/BillingContactPhone__c.field-meta.xml
<CustomField>
    <fullName>BillingContactPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>