force-app/main/default/objects/NSSSalesClient__c/fields/LocationContactPhone__c.field-meta.xml
<CustomField>
    <fullName>LocationContactPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Contact Phone</label>
    <type>Phone</type>
</CustomField>