force-app/main/default/objects/NSSSalesClient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>CheckedForDupe__c</columns>
    <columns>IsDuplicate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>