force-app/main/default/objects/NSSSalesClient__c/listViews/Update_Today.listView-meta.xml
<ListView>
    <fullName>Update_Today</fullName>
    <columns>NAME</columns>
    <columns>CompanyName__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>ZipCode__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Update Today</label>
</ListView>